[package]
name = "foo"
version = "0.1.0"
edition = "2021"
publish = false


[lib]
path = "lib.rs"
crate-type = ["dylib", "staticlib"]


[profile.dev]
panic = "abort"


[profile.release]
panic = "abort"
opt-level = "s"         # optimize for binary size (mb. use 3)
overflow-checks = false # Runtime integer overflow checks. (TODO: false)
lto = "fat"
incremental = false
codegen-units = 1

debug = 0
strip = "debuginfo" # or symbols, for bin
debug-assertions = false
